# well

./: CLAUDE.md  CLAUDE_MUD_LOG_ANALYSIS.md  CLAUDE_WELL_REPORT_ANALYSIS.md  CODE_DESCRIPTION.md  MURPHY_1_WELL_FINDINGS_SUMMARY.md  Murphy 1_MainPass.las  Murphy1_Analysis_Report.txt  README.md  W007 Murphy 1 Mud Log.md  W007 Murphy 1 Well Report 12-17.md  las_analysis.py  main.py  pdf_to_markdown.py  pyproject.toml  repomix-output.xml
.claude/: settings.local.json
